# researcher-server

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  agents.py  crew.py  database.py  main.py  pyproject.toml  tasks.py
db/: chroma.sqlite3
