[tool.poetry]
name = "researcher-server"
version = "0.1.0"
description = ""
authors = ["Kevin Lee <28203679+klee-repos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
tools = "^0.1.9"
python-dotenv = "^1.0.1"
pyowm = "^3.3.0"
crewai = { extras = ["tools"], version = "^0.35.8" }
crewai-tools = "^0.4.6"
fastapi = "^0.111.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
